--- a/src/Services/Auth/Auth.Domain/Auth.Domain.csproj
+++ b/src/Services/Auth/Auth.Domain/Auth.Domain.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MongoDB.Driver" Version="2.19.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
   </ItemGroup>
 
 </Project>
