--- a/src/Services/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/src/Services/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -11,4 +11,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
 	</ItemGroup>
 	
+	<ItemGroup>
+	  <ProjectReference Include="..\Auth.Application\Auth.Application.csproj" />
+	</ItemGroup>
+	
 </Project>
