--- a/src/Services/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
+++ b/src/Services/Auth/Auth.Infrastructure/Auth.Infrastructure.csproj
@@ -15,4 +15,8 @@
 	  <ProjectReference Include="..\Auth.Application\Auth.Application.csproj" />
 	</ItemGroup>
 	
+	<ItemGroup>
+	  <Folder Include="Seed\" />
+	</ItemGroup>
+	
 </Project>
