--- a/src/BuildingBlocks/BuildingBlocks.Security/BuildingBlocks.Security.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Security/BuildingBlocks.Security.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.2" />
+	</ItemGroup>
+
 </Project>
