Configured Auth.Api Settings

--- a/src/Services/Auth/Auth.Api/appsettings.json
+++ b/src/Services/Auth/Auth.Api/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
+  },
+  "BearerTokenSettings": {
+    "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
+    "Issuer": "https://localhost:7144",
+    "Audiance": "Any",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationHours": 168,
+    "AllowMultipleLoginsFromTheSameUser": false,
+    "AllowSignoutAllUserActiveClients": true
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
