added serilog to Auth.Api

--- a/src/Services/Auth/Auth.Api/Auth.Api.csproj
+++ b/src/Services/Auth/Auth.Api/Auth.Api.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
     <ProjectReference Include="..\Auth.Infrastructure\Auth.Infrastructure.csproj" />
   </ItemGroup>
 
