--- a/src/Services/Auth/Auth.Api/appsettings.json
+++ b/src/Services/Auth/Auth.Api/appsettings.json
@@ -11,11 +11,15 @@
     "AllowMultipleLoginsFromTheSameUser": false,
     "AllowSignoutAllUserActiveClients": true
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
