--- a/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 	
   <ItemGroup>
+    <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
