--- a/src/Services/Plan/Plan.Domain/Plan.Domain.csproj
+++ b/src/Services/Plan/Plan.Domain/Plan.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MongoDB.Driver" Version="2.19.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Mongo\BuildingBlocks.Persistence.Mongo.csproj" />
+  </ItemGroup>
+
 </Project>
