--- a/src/Services/Plan/Plan.Application/Plan.Application.csproj
+++ b/src/Services/Plan/Plan.Application/Plan.Application.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="MediatR" Version="12.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Plan.Domain\Plan.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
