--- a/src/Services/Plan/Plan.Infrastructure/Plan.Infrastructure.csproj
+++ b/src/Services/Plan/Plan.Infrastructure/Plan.Infrastructure.csproj
@@ -6,4 +6,13 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Humanizer" Version="2.14.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Mongo\BuildingBlocks.Persistence.Mongo.csproj" />
+    <ProjectReference Include="..\Plan.Domain\Plan.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
