--- a/src/Services/Plan/Plan.Api/Plan.Api.csproj
+++ b/src/Services/Plan/Plan.Api/Plan.Api.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
+    <ProjectReference Include="..\Plan.Infrastructure\Plan.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
