--- a/src/Services/Plan/Plan.Api/appsettings.json
+++ b/src/Services/Plan/Plan.Api/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "MongoOptions": {
+    "ConnectionString": "<connection string>",
+    "DatabaseName": "plan-service"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
