--- a/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -16,6 +16,12 @@
   <ItemGroup>
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
+	  <PackageReference Include="MediatR" Version="12.0.1" />
+
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="CQRS\Commands\" />
   </ItemGroup>
 
 </Project>
