--- a/src/Services/Plan/Plan.Api/appsettings.json
+++ b/src/Services/Plan/Plan.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "MongoOptions": {
-    "ConnectionString": "<connection string>",
+    "ConnectionString": "mongodb+srv://almost_01:V8J7Xdjgc8LTSKE4@cluster0.sxqntim.mongodb.net/?retryWrites=true&w=majority",
     "DatabaseName": "plan-service"
   },
   "Serilog": {
