added dynamic url for callback

--- a/src/Services/Plan/Plan.Application/Plan.Application.csproj
+++ b/src/Services/Plan/Plan.Application/Plan.Application.csproj
@@ -18,4 +18,8 @@
     <ProjectReference Include="..\Plan.Infrastructure\Plan.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\VerifyingPayment\" />
+  </ItemGroup>
+
 </Project>
