--- a/src/Services/Ad/Ad.Domain/Ad.Domain.csproj
+++ b/src/Services/Ad/Ad.Domain/Ad.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Ef\BuildingBlocks.Persistence.Ef.csproj" />
+  </ItemGroup>
+
 </Project>
