--- a/src/Services/Ad/Ad.Application/Ad.Application.csproj
+++ b/src/Services/Ad/Ad.Application/Ad.Application.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ad.Domain\Ad.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
