--- a/src/Services/Ad/Ad.Infrastructure/Ad.Infrastructure.csproj
+++ b/src/Services/Ad/Ad.Infrastructure/Ad.Infrastructure.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Ad.Application\Ad.Application.csproj" />
+  </ItemGroup>
+
 </Project>
