--- a/src/Services/Ad/Ad.Application/Ad.Application.csproj
+++ b/src/Services/Ad/Ad.Application/Ad.Application.csproj
@@ -1,11 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	
+	<ItemGroup>
+		<PackageReference Include="AutoMapper" Version="12.0.1" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\Ad.Domain\Ad.Domain.csproj" />
   </ItemGroup>
