--- a/src/Services/Ad/Ad.Infrastructure/Ad.Infrastructure.csproj
+++ b/src/Services/Ad/Ad.Infrastructure/Ad.Infrastructure.csproj
@@ -5,7 +5,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
+	
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.5" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.5" />
+	</ItemGroup>
+	
   <ItemGroup>
     <ProjectReference Include="..\Ad.Application\Ad.Application.csproj" />
   </ItemGroup>
