--- a/src/Services/Plan/Plan.Application/Plan.Application.csproj
+++ b/src/Services/Plan/Plan.Application/Plan.Application.csproj
@@ -8,7 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="FluentValidation" Version="11.5.2" />
+	<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+	<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
+	<PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="MediatR" Version="12.0.1" />
   </ItemGroup>
 
