added ad service registeries

--- a/src/Services/Ad/Ad.Api/Ad.Api.csproj
+++ b/src/Services/Ad/Ad.Api/Ad.Api.csproj
@@ -28,5 +28,9 @@
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
     <ProjectReference Include="..\Ad.Infrastructure\Ad.Infrastructure.csproj" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
 
 </Project>
