--- a/src/Services/Ad/Ad.Api/appsettings.json
+++ b/src/Services/Ad/Ad.Api/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    }
+  }
 }
