--- a/src/Services/Ad/Ad.Application/Ad.Application.csproj
+++ b/src/Services/Ad/Ad.Application/Ad.Application.csproj
@@ -8,11 +8,21 @@
 	
 	<ItemGroup>
 		<PackageReference Include="AutoMapper" Version="12.0.1" />
+		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
+		<PackageReference Include="FluentValidation" Version="11.5.2" />
+		<PackageReference Include="MediatR" Version="12.0.1" />
 	</ItemGroup>
 	
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Core\BuildingBlocks.Core.csproj" />
     <ProjectReference Include="..\Ad.Domain\Ad.Domain.csproj" />
+  </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Features\Ad\" />
+    <Folder Include="Features\AdGallery\" />
   </ItemGroup>
 
 </Project>
