--- a/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -18,7 +18,8 @@
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 	  <PackageReference Include="MediatR" Version="12.0.1" />
-
+	  <PackageReference Include="SixLabors.ImageSharp" Version="2.1.0" />
+	  <PackageReference Include="LazZiya.ImageResize" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
