--- a/src/Services/Auth/Auth.Application/Auth.Application.csproj
+++ b/src/Services/Auth/Auth.Application/Auth.Application.csproj
@@ -15,6 +15,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Core\BuildingBlocks.Core.csproj" />
+	  <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Ef\BuildingBlocks.Persistence.Ef.csproj" />
 	  <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
 	  <ProjectReference Include="..\Auth.Domain\Auth.Domain.csproj" />
 	</ItemGroup>
