--- a/src/Services/Auth/Auth.Domain/Auth.Domain.csproj
+++ b/src/Services/Auth/Auth.Domain/Auth.Domain.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Ef\BuildingBlocks.Persistence.Ef.csproj" />
+  </ItemGroup>
+
 </Project>
