--- a/src/Services/Auth/Auth.Api/appsettings.json
+++ b/src/Services/Auth/Auth.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "EventBus": "amqp://guest:guest@localhost:5672"
   },
   "BearerTokenSettings": {
     "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
