--- a/src/Services/Plan/Plan.Api/Plan.Api.csproj
+++ b/src/Services/Plan/Plan.Api/Plan.Api.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Messaging\BuildingBlocks.Messaging.csproj" />
     <ProjectReference Include="..\Plan.Application\Plan.Application.csproj" />
     <ProjectReference Include="..\Plan.Infrastructure\Plan.Infrastructure.csproj" />
   </ItemGroup>
