--- a/src/Services/Plan/Plan.Api/appsettings.json
+++ b/src/Services/Plan/Plan.Api/appsettings.json
@@ -1,7 +1,8 @@
 {
   "MongoOptions": {
     "ConnectionString": "mongodb+srv://almost_01:V8J7Xdjgc8LTSKE4@cluster0.sxqntim.mongodb.net/?retryWrites=true&w=majority",
-    "DatabaseName": "plan-service"
+    "DatabaseName": "plan-service",
+    "EventBus": "amqp://guest:guest@localhost:5672"
   },
   "Serilog": {
     "MinimumLevel": {
