--- a/src/Services/Plan/Plan.Api/appsettings.json
+++ b/src/Services/Plan/Plan.Api/appsettings.json
@@ -1,8 +1,10 @@
 {
+  "ConnectionStrings": {
+    "EventBus": "amqp://guest:guest@localhost:5672"
+  },
   "MongoOptions": {
     "ConnectionString": "mongodb+srv://almost_01:V8J7Xdjgc8LTSKE4@cluster0.sxqntim.mongodb.net/?retryWrites=true&w=majority",
-    "DatabaseName": "plan-service",
-    "EventBus": "amqp://guest:guest@localhost:5672"
+    "DatabaseName": "plan-service"
   },
   "Serilog": {
     "MinimumLevel": {
