--- a/src/Services/Plan/Plan.Api/appsettings.json
+++ b/src/Services/Plan/Plan.Api/appsettings.json
@@ -3,7 +3,7 @@
     "EventBus": "amqp://guest:guest@localhost:5672"
   },
   "MongoOptions": {
-    "ConnectionString": "mongodb+srv://almost_01:V8J7Xdjgc8LTSKE4@cluster0.sxqntim.mongodb.net/?retryWrites=true&w=majority",
+    "ConnectionString": "<Connection String>",
     "DatabaseName": "plan-service"
   },
   "Serilog": {
