--- a/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj
@@ -16,6 +16,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="11.5.2" />
     <PackageReference Include="Hellang.Middleware.ProblemDetails" Version="6.5.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
 	  <PackageReference Include="MediatR" Version="12.0.1" />
 	  <PackageReference Include="SixLabors.ImageSharp" Version="2.1.0" />
