--- a/src/Services/Ticket/Ticket.Domain/Ticket.Domain.csproj
+++ b/src/Services/Ticket/Ticket.Domain/Ticket.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Mongo\BuildingBlocks.Persistence.Mongo.csproj" />
+  </ItemGroup>
+
 </Project>
