ticket api connection fix

--- a/src/Services/Ticket/Ticket.Api/appsettings.json
+++ b/src/Services/Ticket/Ticket.Api/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "MongoOptions": {
+    "ConnectionString": "<Connection String>",
+    "DatabaseName": "ticket-service"
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    }
+  }
 }
