--- a/src/Services/Ticket/Ticket.Api/Ticket.Api.csproj
+++ b/src/Services/Ticket/Ticket.Api/Ticket.Api.csproj
@@ -16,5 +16,9 @@
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
     <ProjectReference Include="..\Ticket.Application\Ticket.Application.csproj" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Controllers\Admin\" />
+  </ItemGroup>
 
 </Project>
