--- a/src/Services/Ad/Ad.Api/appsettings.json
+++ b/src/Services/Ad/Ad.Api/appsettings.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
+  "UserClientOptions": {
+    "UserRoleUrl": "https://localhost:6001/api/role/verify",
+    "UserPlanUrl": "https://localhost:6201/api/user-plan/verify"
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
