--- a/src/Services/Auth/Auth.Application/Auth.Application.csproj
+++ b/src/Services/Auth/Auth.Application/Auth.Application.csproj
@@ -11,6 +11,8 @@
 		<PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.10" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.10" />
+		<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.5.2" />
+		<PackageReference Include="FluentValidation" Version="11.5.2" />
 	</ItemGroup>
 
 	<ItemGroup>
