--- a/src/Services/Ad/Ad.Domain/Ad.Domain.csproj
+++ b/src/Services/Ad/Ad.Domain/Ad.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Core\BuildingBlocks.Core.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Persistence.Ef\BuildingBlocks.Persistence.Ef.csproj" />
   </ItemGroup>
 
