--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
 version: '3.4'
 
+networks:
+  backend:
+
 services:
 
   rabbit.mq:
@@ -8,6 +11,8 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
+    networks:
+      - backend
 
   mongo.db:
     container_name: mongo.db
@@ -18,6 +23,8 @@ services:
       - MONGO_INITDB_ROOT_PASSWORD=admin
     ports:
       - "27017:27017"
+    networks:
+      - backend
 
   sql.db:
     container_name: sql.db
@@ -29,6 +36,8 @@ services:
       - "MSSQL_PID=Developer"
     ports:
       - "1400:1433"
+    networks:
+      - backend
 
   ad.api:
     container_name: ad.api
@@ -49,6 +58,8 @@ services:
       - sql.db
       - auth.api
       - plan.api
+    networks:
+      - backend
   
   auth.api:
     container_name: auth.api
@@ -67,6 +78,8 @@ services:
     depends_on:
       - sql.db
       - rabbit.mq
+    networks:
+      - backend
 
   plan.api:
     container_name: plan.api
@@ -85,6 +98,8 @@ services:
     depends_on:
       - mongo.db
       - rabbit.mq
+    networks:
+      - backend
 
   ticket.api:
     container_name: ticket.api
@@ -101,3 +116,5 @@ services:
       - "3301:443"
     depends_on:
       - mongo.db
+    networks:
+      - backend
