removed https for docker

--- a/src/Services/Ad/Ad.Api/appsettings.json
+++ b/src/Services/Ad/Ad.Api/appsettings.json
@@ -3,8 +3,8 @@
     "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
   "UserClientOptions": {
-    "UserRoleUrl": "https://localhost:6001/api/role/verify",
-    "UserPlanUrl": "https://localhost:6201/api/user-plan/verify"
+    "UserRoleUrl": "http://localhost:8000/api/role/verify",
+    "UserPlanUrl": "http://localhost:6200/api/user-plan/verify"
   },
   "Serilog": {
     "MinimumLevel": {
