--- a/src/Services/Ad/Ad.Api/Ad.Api.csproj
+++ b/src/Services/Ad/Ad.Api/Ad.Api.csproj
@@ -30,6 +30,7 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
     <ProjectReference Include="..\Ad.Infrastructure\Ad.Infrastructure.csproj" />
   </ItemGroup>
 	
