--- a/src/ApiGateway/appsettings.json
+++ b/src/ApiGateway/appsettings.json
@@ -1,9 +1,21 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "BearerTokenSettings": {
+    "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
+    "Issuer": "https://localhost:7900",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationHours": 168,
+    "AllowMultipleLoginsFromTheSameUser": false,
+    "AllowSignoutAllUserActiveClients": true
   },
-  "AllowedHosts": "*"
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information",
+        "Microsoft.AspNetCore": "Warning",
+        "System": "Warning"
+      }
+    }
+  }
 }
