Ad Service auth fix

--- a/src/Services/Ad/Ad.Api/Dockerfile
+++ b/src/Services/Ad/Ad.Api/Dockerfile
@@ -8,6 +8,7 @@ COPY ["src/Services/Ad/Ad.Api/Ad.Api.csproj", "src/Services/Ad/Ad.Api/"]
 COPY ["src/BuildingBlocks/BuildingBlocks.Logging/BuildingBlocks.Logging.csproj", "src/BuildingBlocks/BuildingBlocks.Logging/"]
 COPY ["src/BuildingBlocks/BuildingBlocks.Core/BuildingBlocks.Core.csproj", "src/BuildingBlocks/BuildingBlocks.Core/"]
 COPY ["src/Services/Ad/Ad.Infrastructure/Ad.Infrastructure.csproj", "src/Services/Ad/Ad.Infrastructure/"]
+COPY ["src/BuildingBlocks/BuildingBlocks.Security/BuildingBlocks.Security.csproj", "src/BuildingBlocks/BuildingBlocks.Security/"]
 COPY ["src/Services/Ad/Ad.Application/Ad.Application.csproj", "src/Services/Ad/Ad.Application/"]
 COPY ["src/Services/Ad/Ad.Domain/Ad.Domain.csproj", "src/Services/Ad/Ad.Domain/"]
 COPY ["src/BuildingBlocks/BuildingBlocks.Persistence.Ef/BuildingBlocks.Persistence.Ef.csproj", "src/BuildingBlocks/BuildingBlocks.Persistence.Ef/"]
