--- a/src/Services/Ad/Ad.Api/appsettings.json
+++ b/src/Services/Ad/Ad.Api/appsettings.json
@@ -2,6 +2,13 @@
   "ConnectionStrings": {
     "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
   },
+  "BearerTokenSettings": {
+    "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationHours": 168,
+    "AllowMultipleLoginsFromTheSameUser": false,
+    "AllowSignoutAllUserActiveClients": true
+  },
   "UserClientOptions": {
     "UserRoleUrl": "http://localhost:8000/api/role/verify",
     "UserPlanUrl": "http://localhost:6200/api/user-plan/verify"
