--- a/src/Services/Ticket/Ticket.Api/Ticket.Api.csproj
+++ b/src/Services/Ticket/Ticket.Api/Ticket.Api.csproj
@@ -18,6 +18,7 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Logging\BuildingBlocks.Logging.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
     <ProjectReference Include="..\Ticket.Application\Ticket.Application.csproj" />
   </ItemGroup>
 
