--- a/src/Services/Ticket/Ticket.Api/appsettings.json
+++ b/src/Services/Ticket/Ticket.Api/appsettings.json
@@ -3,6 +3,13 @@
     "ConnectionString": "<Connection String>",
     "DatabaseName": "ticket-service"
   },
+  "BearerTokenSettings": {
+    "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationHours": 168,
+    "AllowMultipleLoginsFromTheSameUser": false,
+    "AllowSignoutAllUserActiveClients": true
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
