--- a/src/Services/Ad/Ad.Application/Ad.Application.csproj
+++ b/src/Services/Ad/Ad.Application/Ad.Application.csproj
@@ -17,6 +17,7 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Core\BuildingBlocks.Core.csproj" />
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
     <ProjectReference Include="..\Ad.Domain\Ad.Domain.csproj" />
   </ItemGroup>
 
