--- a/src/Services/Plan/Plan.Api/appsettings.json
+++ b/src/Services/Plan/Plan.Api/appsettings.json
@@ -6,6 +6,13 @@
     "ConnectionString": "<Connection String>",
     "DatabaseName": "plan-service"
   },
+  "BearerTokenSettings": {
+    "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
+    "AccessTokenExpirationMinutes": 5,
+    "RefreshTokenExpirationHours": 168,
+    "AllowMultipleLoginsFromTheSameUser": false,
+    "AllowSignoutAllUserActiveClients": true
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
