--- a/src/Services/Ticket/Ticket.Application/Ticket.Application.csproj
+++ b/src/Services/Ticket/Ticket.Application/Ticket.Application.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 	
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
     <ProjectReference Include="..\Ticket.Infrastructure\Ticket.Infrastructure.csproj" />
   </ItemGroup>
 
