--- a/src/Services/Ad/Ad.Application/Ad.Application.csproj
+++ b/src/Services/Ad/Ad.Application/Ad.Application.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 	
   <ItemGroup>
+    <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Cache\BuildingBlocks.Cache.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Core\BuildingBlocks.Core.csproj" />
     <ProjectReference Include="..\..\..\BuildingBlocks\BuildingBlocks.Security\BuildingBlocks.Security.csproj" />
     <ProjectReference Include="..\Ad.Domain\Ad.Domain.csproj" />
