--- a/src/BuildingBlocks/BuildingBlocks.Cache/BuildingBlocks.Cache.csproj
+++ b/src/BuildingBlocks/BuildingBlocks.Cache/BuildingBlocks.Cache.csproj
@@ -13,4 +13,8 @@
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
 	
+	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="7.0.14" />
+	</ItemGroup>
+	
 </Project>
