--- a/src/Services/Ad/Ad.Api/appsettings.json
+++ b/src/Services/Ad/Ad.Api/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true"
+    "SqlConnection": "Data Source=.; Initial Catalog=New_AdZone_DB;Integrated Security=True; MultipleActiveResultSets=true;TrustServerCertificate=true",
+    "redis": "localhost:5002"
   },
   "BearerTokenSettings": {
     "Secret": "SDusfjdkfcijewpaajdfsdjfcnsdur",
